Dockerfile: Image size optimization with jdeps & jlink